animation은 더 안 만들겠습니다

--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -398,11 +398,85 @@
                 <div class="best-content">
                     <div class="num">1</div>
                     <img src="" alt="">
-                    <p class="content-company">(주)정진호이펙트</p>
-                    <p class="content-name">스누아토 크림 200ml(피부 보습보호)</p>
+                    <p class="content-company">주식회사 스마트인피니</p>
+                    <p class="content-name">[경기] 과천 서울랜드 파크이용권(~26년 3월)</p>
                     <p class="content-event">회원 혜택가</p>
                     <div class="content-tags">
                         <div class="tag best">BEST</div>
+                    </div>
+                </div>
+                <div class="best-content">
+                    <div class="num">2</div>
+                    <img src="" alt="">
+                    <p class="content-company">주식회사 넥스트에너지</p>
+                    <p class="content-name">[경기 고양] 킨텍스 상상체험 키즈월드 통합권(12/18~26/3/2)</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag best">BEST</div>
+                    </div>
+                </div>
+                <div class="best-content">
+                    <div class="num">3</div>
+                    <img src="" alt="">
+                    <p class="content-company">주식회사 넥스트에너지</p>
+                    <p class="content-name">[경기 고양] 원마운트 스노우파크 특가(~3/2)</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag best">BEST</div>
+                    </div>
+                </div>
+                <div class="best-content">
+                    <div class="num">4</div>
+                    <img src="" alt="">
+                    <p class="content-company">주식회사 하이즈홀딩스</p>
+                    <p class="content-name">★출시기념특가★[아망떼] 두꺼운 프리미엄 70평량 고평량 물티슈 70매 10팩/20팩</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag new">NEW</div>
+                        <div class="tag free">무료배송</div>
+                    </div>
+                </div>
+                <div class="best-content">
+                    <div class="num">5</div>
+                    <img src="" alt="">
+                    <p class="content-company">주식회사 넥스트에너지</p>
+                    <p class="content-name">[경주] 경주월드 종일이용권</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag best">BEST</div>
+                    </div>
+                </div>
+                <div class="best-content">
+                    <div class="num">6</div>
+                    <img src="" alt="">
+                    <p class="content-company">아이스크림미디어</p>
+                    <p class="content-name">★학습환경 1위템★ [펌플렉스] 바른자세 독서쿠션 독서대 레벨업쿠션130</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag new">NEW</div>
+                        <div class="tag free">무료배송</div>
+                    </div>
+                </div>
+                <div class="best-content">
+                    <div class="num">7</div>
+                    <img src="" alt="">
+                    <p class="content-company">아이스크림미디어</p>
+                    <p class="content-name">[한삼인x아이스크림미디어] 하이 튼튼 홍삼 젤리(60포 - 2개월분)</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag best">BEST</div>
+                        <div class="tag free">무료배송</div>
+                    </div>
+                </div>
+                <div class="best-content">
+                    <div class="num">8</div>
+                    <img src="" alt="">
+                    <p class="content-company">(주)다온</p>
+                    <p class="content-name">[퓨어핏] KF94 2D 마스크 대/중/소형 100매(25매입X4)</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag best">BEST</div>
+                        <div class="tag free">무료배송</div>
                     </div>
                 </div>
             </div>
