animation은 더 안 만들겠습니다

--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -481,6 +481,19 @@
                 </div>
             </div>
         </div>
+        <div class="AD-contents-area">
+            <div class="AD-content"></div>
+        </div>
+        <div class="recommend-contents-frame">
+            <div class="recommend-contents-area">
+                <p class="recommend-subtitle">기획전</p>
+                <p class="recommend-title">하이스토어가 추천하는 <br>다양한 상품모음</p>
+                <p class="recommend-subscription"> 필요한 상품을 합리적인 가격에 구매하세요</p>
+                <div class="recommend-contents">
+                    <div class="recommend-content"></div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
