--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -490,8 +490,106 @@
                 <p class="recommend-title">하이스토어가 추천하는 <br>다양한 상품모음</p>
                 <p class="recommend-subscription"> 필요한 상품을 합리적인 가격에 구매하세요</p>
                 <div class="recommend-contents">
-                    <div class="recommend-content"></div>
+                    <div class="recommend-content">
+                        <img src="" alt="">
+                        <p class="recommend-content-title">독감주의! 온 가족 마스크 할인전😷</p>
+                        <p class="recommend-content-subtitle">2025-11-12 ~ 2026-02-28</p>
+                    </div>
+                    <div class="recommend-content">
+                        <img src="" alt="">
+                        <p class="recommend-content-title">🥇우리 아이 1등 공부습관 만들기✏️</p>
+                        <p class="recommend-content-subtitle">2025-11-20 ~ 2026-02-28</p>
+                    </div>
+                    <div class="recommend-content">
+                        <img src="" alt="">
+                        <p class="recommend-content-title">🧣온 가족 따끈~하게! 온열 제품 총정...</p>
+                        <p class="recommend-content-subtitle">2025-12-01 ~ 2026-01-31</p>
+                    </div>
                 </div>
+            </div>
+        </div>
+        <div class="sales-contents-area"><!-- best contents area -->
+            <div class="new-contents-header">
+                <p class="new-contents-title">특가</p>
+                <a href="#" class="view-all">전체보기 &gt;</a>
+            </div>
+            <div class="sales-contents">
+                <div class="sales-content">
+                    <img src="" alt="">
+                    <p class="content-company">㈜ 키움하우스</p>
+                    <p class="content-name">[오볼] 투온 오볼 원터치 텀블러 480ml (갤럭시/롤리팝/스노우씰/판다)</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag free">무료배송</div>
+                    </div>
+                </div>
+                <div class="sales-content">
+                    <img src="" alt="">
+                    <p class="content-company">주식회사 다원스토리</p>
+                    <p class="content-name">[보국] 에어셀 카본 탄소매트 허그미 싱글 BKB-1602S</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag free">무료배송</div>
+                    </div>
+                </div>
+                <div class="sales-content">
+                    <img src="" alt="">
+                    <p class="content-company">한국목공교육개발원</p>
+                    <p class="content-name">★26년 1월~2월★[창의·진로체험] 경기 수원 목공체험 4회/ 나만의 목공 작품 만들기</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                    </div>
+                </div>
+                <div class="sales-content">
+                    <img src="" alt="">
+                    <p class="content-company">주식회사 넥스트에너지</p>
+                    <p class="content-name">[경주] 경주월드 종일이용권</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag best">BEST</div>
+                    </div>
+                </div>
+                <div class="sales-content">
+                    <img src="" alt="">
+                    <p class="content-company">주식회사 더진엠씨</p>
+                    <p class="content-name">★비공개초특가★[제니퍼룸] 에어소닉 플라즈마 헤어드라이기 JRG-HD1501 (4종 택1)</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag best">BEST</div>
+                        <div class="tag free">무료배송</div>
+                    </div>
+                </div>
+                <div class="sales-content">
+                    <img src="" alt="">
+                    <p class="content-company">주식회사 에스원트레이딩</p>
+                    <p class="content-name">[하버드키즈] 클래식 토글 단추 푸퍼 패딩 HJCCJPE44222</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag free">무료배송</div>
+                    </div>
+                </div>
+                <div class="sales-content">
+                    <img src="" alt="">
+                    <p class="content-company">제이티트레이드</p>
+                    <p class="content-name">★MD추천★[해남고구마협동조합] 25년 수확 특상 햇꿀밤고구마 2kg/3kg/5kg/10kg</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag sales">특가</div>
+                        <div class="tag best">BEST</div>
+                        <div class="tag free">무료배송</div>
+                    </div>
+                </div>
+                <div class="sales-content">
+                    <img src="" alt="">
+                    <p class="content-company">비즈라인</p>
+                    <p class="content-name">[넛토피아] 땅콩 100% 순수 땅콩버터 200g x 2세트</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag new">NEW</div>
+                        <div class="tag free">무료배송</div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
