--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -589,9 +589,24 @@
                         <div class="tag free">무료배송</div>
                     </div>
                 </div>
-
             </div>
+            <div class="view-more">더보기</div>
         </div>
+        <div class="gonggeesahang">
+            <div class="gonggee-head">
+                <div class="gonggee">공지사항</div>
+                <div class="gonggee-title">하이스토어 선물하기 서비스 오픈 안내</div>
+            </div>
+            <div class="gonggee-plus">+</div>
+            <hr style="position: absolute; margin-left: calc((100vw - var(--visual-width)) / -2); width: 100vw; top: 0; left: 0; border: 1px solid #e2e2e2;">
+            <hr style="position: absolute; margin-left: calc((100vw - var(--visual-width)) / -2); width: 100vw; bottom: 0; left: 0; border: 1px solid #e2e2e2;">
+        </div>
+        <footer>
+            <img src="" alt="">
+            <div class="footer-header">
+                
+            </div>
+        </footer>
     </section>
 </body>
 
