--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -592,19 +592,46 @@
             </div>
             <div class="view-more">더보기</div>
         </div>
-        <div class="gonggeesahang">
-            <div class="gonggee-head">
-                <div class="gonggee">공지사항</div>
-                <div class="gonggee-title">하이스토어 선물하기 서비스 오픈 안내</div>
+        <div class="notice-area">
+            <div class="notice-head">
+                <div class="notice">공지사항</div>
+                <div class="notice-title">하이스토어 선물하기 서비스 오픈 안내</div>
             </div>
-            <div class="gonggee-plus">+</div>
+            <div class="notice-plus">+</div>
             <hr style="position: absolute; margin-left: calc((100vw - var(--visual-width)) / -2); width: 100vw; top: 0; left: 0; border: 1px solid #e2e2e2;">
             <hr style="position: absolute; margin-left: calc((100vw - var(--visual-width)) / -2); width: 100vw; bottom: 0; left: 0; border: 1px solid #e2e2e2;">
         </div>
         <footer>
             <img src="" alt="">
             <div class="footer-header">
-                
+                <ul class="footer-nav">
+                    <li>회사소개</li>
+                    <li>이용약관</li>
+                    <li class="bold">개인정보처리방침</li>
+                    <li>제휴/입점문의 <span style="border: 1px solid #e2e2e2; padding: 3px 10px; margin-left: 5px;">사업자정보확인</span></li>
+                    <li class="bold">고객센터</li>
+                </ul>
+                하이스토어 고객센터 > 
+            </div>
+            <div class="footer-main">
+                <div class="footer-main-left">
+                    <ul class="footer-nav">
+                        <li class="bold">(주)아이스크림미디어</li>
+                        <li>대표이사 : 허주환, 현준우</li>
+                        <li>주소 : 경기도 성남시 분당구 판교역로 225-20</li>
+                        <li>사업자등록번호 : 120-86-33565</li>
+                    </ul>
+                    <ul class="footer-nav">
+                        <li>통신판매업신고번호</li>
+                        <li>제 2011-경기성남-1785 호</li>
+                        <li>대표전화 : 1544-6040</li>
+                        <li>팩스 : 02-3444-0308</li>
+                        <li>이메일 : mail@hi-store.co.kr</li>
+                    </ul>
+                </div>
+                <div class="footer-main-right">
+
+                </div>
             </div>
         </footer>
     </section>
