--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -598,8 +598,10 @@
                 <div class="notice-title">하이스토어 선물하기 서비스 오픈 안내</div>
             </div>
             <div class="notice-plus">+</div>
-            <hr style="position: absolute; margin-left: calc((100vw - var(--visual-width)) / -2); width: 100vw; top: 0; left: 0; border: 1px solid #e2e2e2;">
-            <hr style="position: absolute; margin-left: calc((100vw - var(--visual-width)) / -2); width: 100vw; bottom: 0; left: 0; border: 1px solid #e2e2e2;">
+            <hr
+                style="position: absolute; margin-left: calc((100vw - var(--visual-width)) / -2); width: 100vw; top: 0; left: 0; border: 1px solid #e2e2e2;">
+            <hr
+                style="position: absolute; margin-left: calc((100vw - var(--visual-width)) / -2); width: 100vw; bottom: 0; left: 0; border: 1px solid #e2e2e2;">
         </div>
         <footer>
             <img src="" alt="">
@@ -608,17 +610,18 @@
                     <li>회사소개</li>
                     <li>이용약관</li>
                     <li class="bold">개인정보처리방침</li>
-                    <li>제휴/입점문의 <span style="border: 1px solid #e2e2e2; padding: 3px 10px; margin-left: 5px;">사업자정보확인</span></li>
+                    <li>제휴/입점문의 <span
+                            style="border: 1px solid #e2e2e2; padding: 3px 10px; margin-left: 5px;">사업자정보확인</span></li>
                     <li class="bold">고객센터</li>
                 </ul>
-                하이스토어 고객센터 > 
+                하이스토어 고객센터 >
             </div>
             <div class="footer-main">
                 <div class="footer-main-left">
                     <ul class="footer-nav">
                         <li class="bold">(주)아이스크림미디어</li>
                         <li>대표이사 : 허주환, 현준우</li>
-                        <li>주소 : 경기도 성남시 분당구 판교역로 225-20</li>
+                        <li>주소 : 경기도성남시 분당구 판교역로 225-20</li>
                         <li>사업자등록번호 : 120-86-33565</li>
                     </ul>
                     <ul class="footer-nav">
@@ -630,9 +633,16 @@
                     </ul>
                 </div>
                 <div class="footer-main-right">
-
+                    <p class="call-number">1544-6040</p>
+                    <p class="work-time">평일 09:00 ~ 18:00 (주말, 공휴일 휴무)</p>
+                    <p class="lunch-time">점심시간 12:00 ~ 13:00</p>
                 </div>
             </div>
+            <p class="copyright-text">
+                하이스토어에서 판매되는 상품중에는 위탁판매자가 판매하는 상품이 포함되어 있습니다. <br>
+                위탁판매자의 상품의 경우, 하이스토어는 통신판매중개자로서 거래당사자가 아니며, 위탁판매자가 등록한 상품정보 및 거래등에 대해 책임을 지지않습니다.<br><br><br>
+                Copyright © (주)아이스크림미디어. All Rights Reserved
+            </p>
         </footer>
     </section>
 </body>
