--- a/기능반 특강/20260124/index.html
+++ b/기능반 특강/20260124/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .first {
+        width: 100%;
+        height: 300px;
+        background-color: red;
+      }
+      .second {
+        width: 100%;
+        height: 300px;
+        background-color: blue;
+      }
+    </style>
   </head>
   <body>
+    <div class="first"></div>
+    <div class="second"></div>
+    <button id="default-btn">버튼</button>
+    <button class="btn">버튼2</button>
+
     <script src="app.js"></script>
-    <button>버튼</button>
   </body>
 </html>
