DOM 제어의 기본기

--- a/기능반 특강/20260124/index.html
+++ b/기능반 특강/20260124/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="first"></div>
     <div class="second"></div>
-    <button id="default-btn">버튼</button>
+    <button class="btn" id="default-btn">버튼</button>
     <button class="btn">버튼2</button>
 
     <script src="app.js"></script>
