--- a/기능반 특강/20260124/index.html
+++ b/기능반 특강/20260124/index.html
@@ -24,5 +24,6 @@
     <button class="btn">버튼2</button>
 
     <script src="app.js"></script>
+    <script src="dom-example1.js"></script>
   </body>
 </html>
