--- a/기능반 특강/20260124/index.html
+++ b/기능반 특강/20260124/index.html
@@ -20,10 +20,11 @@
   <body>
     <div class="first"></div>
     <div class="second"></div>
-    <button class="btn" id="default-btn">버튼</button>
-    <button class="btn">버튼2</button>
+    <button class="btn1" id="default-btn">버튼</button>
+    <button class="btn2">버튼2</button>
 
-    <script src="app.js"></script>
-    <script src="dom-example1.js"></script>
+    <!--<script src="app.js"></script>-->
+    <script src="event-example1.js"></script>
+    <!--<script src="dom-example1.js"></script>-->
   </body>
 </html>
