--- a/기능반 특강/20260103/index2.html
+++ b/기능반 특강/20260103/index2.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        /* 모든 header 태그 
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <style>
+            /* 모든 header 태그 
         header {}
 
         /* id가 header 인
@@ -15,7 +15,7 @@
         .header {}
         */
 
-        /* px, em, rem, vh, vw, %
+            /* px, em, rem, vh, vw, %
         
         em 현재 요소의 폰트 크기가 16px -> 1em = 16px
         rem 최상위 root 요소의 폰트 크기가 16px -> 1rem = 16px
@@ -32,37 +32,35 @@
         % = 부모 요소의 값 기준
         */
 
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+            * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+            }
 
-        .box {
-            width:1px;
-            height:1px;
-            background-color: red;
-            padding: 20px;
-            /* border-width:5px;
+            .box {
+                width: 1px;
+                height: 1px;
+                background-color: red;
+                padding: 20px;
+                /* border-width:5px;
             border-style:solid;
             border-color:#000; */
-            border: 5px solid #000;
-            margin: 20px;
-            box-sizing: border-box;
-        }
-    </style>
-
-</head>
-<body>
-    <!-- CSS => Cascading Stylesheet
+                border: 5px solid #000;
+                margin: 20px;
+                box-sizing: border-box;
+            }
+        </style>
+    </head>
+    <body>
+        <!-- CSS => Cascading Stylesheet
 
     Cascading -> 폭포수 => (부모 자식 쏴아아-) 
     Stylesheet -->
 
-    <!-- 박스 모델
+        <!-- 박스 모델
       -->
 
-    <div class="box"></div>
-
-</body>
+        <div class="box"></div>
+    </body>
 </html>
