--- a/기능반 특강/20260117/example01.html
+++ b/기능반 특강/20260117/example01.html
@@ -1,21 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <body>
+        <!--1번 케이스-->
+        <!--<script> </script>-->
 
-<body>
-    <!--1번 케이스-->
-    <!--<script> </script>-->
-
-    <!--외부 파일 연결하는 케이스-->
-    <!--<script src="stringexample.js"></script>-->
-    <script src="arrayexample.js"></script>
-
-
-</body>
-
+        <!--외부 파일 연결하는 케이스-->
+        <!--<script src="stringexample.js"></script>-->
+        <script src="arrayexample.js"></script>
+    </body>
 </html>
