--- a/기능반 특강/20260124/todo-simple.html
+++ b/기능반 특강/20260124/todo-simple.html
@@ -4,6 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <style>
+            .todo {
+                padding: 5px 30px;
+            }
+        </style>
     </head>
     <body>
         <input type="text" class="todo-input" />
