--- a/기능반 특강/20260124/todo-simple.html
+++ b/기능반 특강/20260124/todo-simple.html
@@ -25,6 +25,7 @@
             <!-- <div>aa</div> -->
         </div>
 
-        <script src="todo-simple.js"></script>
+        <!--<script src="todo-simple.js"></script>-->
+        <script src="todo-simple2.js"></script>
     </body>
 </html>
