--- a/기능반 특강/20260124/event-capture-bubble.html
+++ b/기능반 특강/20260124/event-capture-bubble.html
@@ -56,8 +56,8 @@
             );
 
             document.querySelector("a").addEventListener("click", (ev) => {
-                ev.preventDefault(); // 요소의 행위를 막습니다
-                /* pr event dafalut */
+                // 요소의 행위를 막습니다 pr event dafalut
+                ev.preventDefault();
 
                 // 요소의 전파를 막는다.
                 ev.stopPropagation();
