--- a/3주자 과제-1/문제1/index.html
+++ b/3주자 과제-1/문제1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>3주차 과제-1 1번</title>
   </head>
   <body>
     <button id="addBtn">추가</button>
