3주차 과제-1 2번

--- a/3주자 과제-1/문제2/index.html
+++ b/3주자 과제-1/문제2/index.html
@@ -6,7 +6,11 @@
     <title>3주차 과제-1 2번</title>
   </head>
   <body>
-    
+    <div>
+      <button id="changeBtn">텍스트 변경</button>
+      <div id="textContainer">Hello, World!</div>
+    </div>
+
     <script src="main.js"></script>
   </body>
 </html>
