--- a/3주차 과제-1 (1)/문제4/index.html
+++ b/3주차 과제-1 (1)/문제4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3주차 과제-1 (1)</title>
+    <title>3주차 과제-1 (1) 4</title>
 </head>
 <body>
     <script src="main.js"></script>
