--- a/3주차 과제-1 (1)/문제6/index.html
+++ b/3주차 과제-1 (1)/문제6/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3주차 과제-1 (1)</title>
+    <title>3주차 과제-1 (1) 6</title>
 </head>
 <body>
+    <div id="display"></div>
     <script src="main.js"></script>
 </body>
 </html>
