--- a/3주차 과제-1 (1)/문제8/index.html
+++ b/3주차 과제-1 (1)/문제8/index.html
@@ -38,6 +38,12 @@
                 top: 0;
                 left: 10px;
             }
+            @media screen and (max-width: 1720px) {
+                #labs {
+                    top: 120px;
+                    left: 0px;
+                }
+            }
         </style>
     </head>
     <body>
